# GL-capstone

./: .gitignore  README.md  STREAMLIT_DEPLOYMENT.md  invoice-processing-design-onepager.md  invoice_processing_app.py  requirements.txt
.streamlit/: config.toml  secrets.example.toml
Val-agent/: .gitignore  README.md  design-onepager.md  lld-onepager.md  req-onepager.md  run_agent.sh  std_invoice.json
Val-agent/data/: demo_invoice_critical.json  demo_invoice_error_currency.json  demo_invoice_error_grand_total.json  demo_invoice_error_line_item_amount.json  demo_invoice_error_partial_receipt.json  demo_invoice_error_subtotal.json  demo_invoice_multiple_failures.json  demo_invoice_pass.json  demo_invoice_review.json
Val-agent/tests/: __init__.py  test_app.py  test_arithmetic.py  test_chat.py  test_db.py  test_graph_flow.py  test_llm.py  test_money.py  test_routing.py
Val-agent/val_agent/: __init__.py  app.py  db.py  graph.py  llm.py  models.py  state.py
Val-agent/val_agent/agents/: __init__.py  chat_agent.py  (+5 more)
invoice_processing/: README.md  __init__.py  adapter.py  chat_agent.py  logging_config.py  orchestrator.py  rag_store.py
invoice_processing/demo_invoices/: 01_straight_through_acme.docx  01_straight_through_acme.json  02_human_review_mismatch.docx  02_human_review_mismatch.json  03_critical_blocked_vendor.docx  03_critical_blocked_vendor.json  README.md  generate_demo_invoices.py  index.json
ocr-agent/: README.md  app_milestone2_frontend.py  design-onepager.md  golden_evaluation_set.json  main.py  milestone2_backend.py  pyproject.toml  requirements.txt
(+8 files in other folders)
