[project]
name = "gl-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "easyocr>=1.7.0",
    "httpx>=0.27.0",
    "langgraph>=1.2.6",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pypdfium2>=4.10.0",
    "python-docx>=0.8.11",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.31.0",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "spacy>=3.6.0",
    "streamlit>=1.28.0",
    "timm==0.4.12",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.45.0",
]
